--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-ca">
 <head>
-  <<meta charset="utf-8">
+  <meta charset="utf-8">
   <title>Bananas</title>
-  <<meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
   <header role="banner">
