--- a/Berries/index.html
+++ b/Berries/index.html
@@ -20,6 +20,16 @@
   <main role="main">
     <h1>Lots of berries—some you didn’t know!</h1>
     <p>There are lots of berries in many different sizes & shapes. And, botanically, there are lots of berries that you don’t normally consider.</p>
-    <
-  </body>
+    <ul>
+      <li><a href="blueberries.html">Blueberries</a></li>
+      <li><a href="grapes.html">Grapes</a></li>
+      <li><a href="red-currants.html">Red Currants</a></li>
+      <li><a href="Bananas.html">Bananas</a></li>
+    </ul>
+  </main>
+  <footer role=contentinfo">
+    <p>© Berries</p>
+  </footer>
+</body>
 </html>
+      
