--- a/berries/red-currants.html
+++ b/berries/red-currants.html
@@ -6,6 +6,23 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
-
-  </body>
+    <header role="banner">
+    <strong>Berries</strong>
+    <nav role="navigation">
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="index.html">Berries</a></li>
+        <li><a href="../resources.html">Resources</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main role="main">
+    <h1>Red currants</h1>
+    <img aria-detail="Red-currants" src="images/red-currants.jpg" alt="A group of red currants.">
+    <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
+  </main>
+  <footer role=contentinfo">
+    <p>© Berries</p>
+  </footer>
+</body>
 </html>
