--- a/berries/resources.html
+++ b/berries/resources.html
@@ -9,12 +9,34 @@
     <header role="banner">
       <strong>Resources</strong>
       <nav role="navigation">
+      <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="berries/index.html">Berries</a></li>
         <li><a href="resources.html">Resources</a></li>
       </ul>
     </nav>
   </header>
+    <main role="main">
+    <h1>Resources</h1>
+    <p>Find out more about berries!</p>
+    <ul>
+      <li><a href="https://en.wikipedia.org/wiki/Berry" rel="external">wikipedia</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Blueberry" rel="external">wikipedia</a></li>
+      <li><a href="hhttps://en.wikipedia.org/wiki/Grape" rel="external">wikipedia</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Redcurrant" rel="external">wikipedia</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Banana" rel="external">wikipedia</a></li>
+      <li><a href="https://www.chapters.indigo.ca/en-ca/books/whats-wrong-with-my-fruit/9781604693584-item.html" rel="external">indigo</a></li>
+      <li><a href="https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html" rel="external">indigo</a></li>
+    </ul>
+    <footer role=contentinfo">
+      <p>© Berries</p>
+    </footer>
+  </body>
+  </html>
+
+
+
+
 
   </body>
 </html>
