--- a/berries/resources.html
+++ b/berries/resources.html
@@ -22,7 +22,7 @@
     <ul>
       <li><a href="https://en.wikipedia.org/wiki/Berry" rel="external">wikipedia</a></li>
       <li><a href="https://en.wikipedia.org/wiki/Blueberry" rel="external">wikipedia</a></li>
-      <li><a href="hhttps://en.wikipedia.org/wiki/Grape" rel="external">wikipedia</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Grape" rel="external">wikipedia</a></li>
       <li><a href="https://en.wikipedia.org/wiki/Redcurrant" rel="external">wikipedia</a></li>
       <li><a href="https://en.wikipedia.org/wiki/Banana" rel="external">wikipedia</a></li>
       <li><a href="https://www.chapters.indigo.ca/en-ca/books/whats-wrong-with-my-fruit/9781604693584-item.html" rel="external">indigo</a></li>
